# QuickWindow

./: package-lock.json  package.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: function.rs  hotkey.rs  main.rs
src-tauri/src/function/: feature.rs
src-tauri/src/function/feature/: application.rs
src-tauri/src/function/feature/application/: application_windows.rs
src-tauri/src/hotkey/: double_tap_macro.rs
