[package]
name = "quick_window"
version = "0.0.0"
description = "quick open window application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.12.0"
inputbot = "0.6.0"
sysinfo = "0.29.10"
winsafe = { version = "0.0.18", features = ["dwm"] }

# [dependencies.windows]
# version = "0.52"
# features = [
#     "Data_Xml_Dom",
#     "Win32_Foundation",
#     "Win32_Security",
#     "Win32_System_Threading",
#     "Win32_UI_WindowsAndMessaging",
#     "Win32_System_ProcessStatus",
#     "Win32_System_Console",
# ]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
